fixed alignment issues and updated the upvote button

--- a/client/src/main/resources/stylesheets/defaultTheme.css
+++ b/client/src/main/resources/stylesheets/defaultTheme.css
@@ -22,6 +22,7 @@
 
 .label{
     -fx-text-fill: -fx-54-foreground;
+    -fx-alignment: CENTER;
 }
 
 /* =================================================== */
@@ -299,7 +300,7 @@
 
 .text-area .scroll-pane {
     -fx-background-radius: 5;
-    -fx-background-color: derive(-fx-54-background, 10%);
+    -fx-background-color: derive(-fx-54-background, -50%);
 }
 
 .text-area:hover{
